--- a/NetflixDataAnalysis.ipynb
+++ b/NetflixDataAnalysis.ipynb
@@ -6,7 +6,7 @@
       "name": "NetflixDataAnalysis.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyORZFS8IbEDOPpDxtt3iV0X",
+      "authorship_tag": "ABX9TyMqo3h+8N/W51P8xCvsvRrJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i_DE4QBlqv5Q"
+      },
+      "source": [
+        "#Netflix Data Analysis\n",
+        "\n",
+        "Eisagwgiko minima sta agglika gia tin ergasia"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "fdNETeA6hY4O"
@@ -43,11 +54,122 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "XQSILmhnrx6O"
+      },
+      "source": [
+        "#Import Libraries"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GXeG_V7wr7M3"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KBe-wbl5sACS"
+      },
+      "source": [
+        "#Load Dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EYQIhx-4sFay"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WRo5QO2rsKsB"
+      },
+      "source": [
+        "#Preprocessing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "92iKaB15sP7h"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Wy-6xCiWhikl"
       },
       "source": [
-        " Νέα ενότητα"
+        "#Visualization Queries"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7piIrDH1rP2b"
+      },
+      "source": [
+        "## Query 1\n",
+        "Edw grafw tin erwtisi"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1vXdLmjPrcLD"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EraxAFkRrdqP"
+      },
+      "source": [
+        "##Query 2\n",
+        "edw grafw tin erwtisi"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7evJHpChsa_R"
+      },
+      "source": [
+        "#Recommendation System"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iBFbXue2sdXk"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
