Δημιουργήθηκε με το Colaboratory

--- a/NetflixDataAnalysis.ipynb
+++ b/NetflixDataAnalysis.ipynb
@@ -6,7 +6,7 @@
       "name": "NetflixDataAnalysis.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMqo3h+8N/W51P8xCvsvRrJ",
+      "authorship_tag": "ABX9TyO6VDlyU2A894LNtGLTwzm2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,14 +42,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fdNETeA6hY4O"
+        "id": "fdNETeA6hY4O",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "27d066fc-33d7-43f5-b057-fda3d4266e9a"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -66,7 +78,7 @@
         "id": "GXeG_V7wr7M3"
       },
       "source": [
-        ""
+        "import pandas as pd\n"
       ],
       "execution_count": null,
       "outputs": []
