Δημιουργήθηκε με το Colaboratory

--- a/NetflixDataAnalysis.ipynb
+++ b/NetflixDataAnalysis.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "NetflixDataAnalysis.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO6VDlyU2A894LNtGLTwzm2",
+      "authorship_tag": "ABX9TyNUFlAcs1Cqstjf5dwe8oRN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,9 +77,14 @@
         "id": "GXeG_V7wr7M3"
       },
       "source": [
-        "import pandas as pd\n"
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "import matplotlib \n",
+        "\n",
+        "%matplotlib inline "
       ],
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -95,13 +99,180 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EYQIhx-4sFay"
+        "id": "EYQIhx-4sFay",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 606
+        },
+        "outputId": "2119461f-6197-4ed1-d049-b060e49434d5"
       },
       "source": [
-        ""
+        "Location = r'/content/gdrive/MyDrive/DataMining/Εργασίες/Data Mining Netflix/data/netflix_titles.csv' # Τo r κάνει escape όλους τους χαρακτήρες στην συμβολοσειρά\n",
+        "\n",
+        "df = pd.read_csv(Location)\n",
+        "df.info()\n",
+        "df.head()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 7787 entries, 0 to 7786\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column        Non-Null Count  Dtype \n",
+            "---  ------        --------------  ----- \n",
+            " 0   show_id       7787 non-null   object\n",
+            " 1   type          7787 non-null   object\n",
+            " 2   title         7787 non-null   object\n",
+            " 3   director      5398 non-null   object\n",
+            " 4   cast          7069 non-null   object\n",
+            " 5   country       7280 non-null   object\n",
+            " 6   date_added    7777 non-null   object\n",
+            " 7   release_year  7787 non-null   int64 \n",
+            " 8   rating        7780 non-null   object\n",
+            " 9   duration      7787 non-null   object\n",
+            " 10  listed_in     7787 non-null   object\n",
+            " 11  description   7787 non-null   object\n",
+            "dtypes: int64(1), object(11)\n",
+            "memory usage: 730.2+ KB\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>show_id</th>\n",
+              "      <th>type</th>\n",
+              "      <th>title</th>\n",
+              "      <th>director</th>\n",
+              "      <th>cast</th>\n",
+              "      <th>country</th>\n",
+              "      <th>date_added</th>\n",
+              "      <th>release_year</th>\n",
+              "      <th>rating</th>\n",
+              "      <th>duration</th>\n",
+              "      <th>listed_in</th>\n",
+              "      <th>description</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>s1</td>\n",
+              "      <td>TV Show</td>\n",
+              "      <td>3%</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>João Miguel, Bianca Comparato, Michel Gomes, R...</td>\n",
+              "      <td>Brazil</td>\n",
+              "      <td>August 14, 2020</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>TV-MA</td>\n",
+              "      <td>4 Seasons</td>\n",
+              "      <td>International TV Shows, TV Dramas, TV Sci-Fi &amp;...</td>\n",
+              "      <td>In a future where the elite inhabit an island ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>s2</td>\n",
+              "      <td>Movie</td>\n",
+              "      <td>7:19</td>\n",
+              "      <td>Jorge Michel Grau</td>\n",
+              "      <td>Demián Bichir, Héctor Bonilla, Oscar Serrano, ...</td>\n",
+              "      <td>Mexico</td>\n",
+              "      <td>December 23, 2016</td>\n",
+              "      <td>2016</td>\n",
+              "      <td>TV-MA</td>\n",
+              "      <td>93 min</td>\n",
+              "      <td>Dramas, International Movies</td>\n",
+              "      <td>After a devastating earthquake hits Mexico Cit...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>s3</td>\n",
+              "      <td>Movie</td>\n",
+              "      <td>23:59</td>\n",
+              "      <td>Gilbert Chan</td>\n",
+              "      <td>Tedd Chan, Stella Chung, Henley Hii, Lawrence ...</td>\n",
+              "      <td>Singapore</td>\n",
+              "      <td>December 20, 2018</td>\n",
+              "      <td>2011</td>\n",
+              "      <td>R</td>\n",
+              "      <td>78 min</td>\n",
+              "      <td>Horror Movies, International Movies</td>\n",
+              "      <td>When an army recruit is found dead, his fellow...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>s4</td>\n",
+              "      <td>Movie</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Shane Acker</td>\n",
+              "      <td>Elijah Wood, John C. Reilly, Jennifer Connelly...</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>November 16, 2017</td>\n",
+              "      <td>2009</td>\n",
+              "      <td>PG-13</td>\n",
+              "      <td>80 min</td>\n",
+              "      <td>Action &amp; Adventure, Independent Movies, Sci-Fi...</td>\n",
+              "      <td>In a postapocalyptic world, rag-doll robots hi...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>s5</td>\n",
+              "      <td>Movie</td>\n",
+              "      <td>21</td>\n",
+              "      <td>Robert Luketic</td>\n",
+              "      <td>Jim Sturgess, Kevin Spacey, Kate Bosworth, Aar...</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>January 1, 2020</td>\n",
+              "      <td>2008</td>\n",
+              "      <td>PG-13</td>\n",
+              "      <td>123 min</td>\n",
+              "      <td>Dramas</td>\n",
+              "      <td>A brilliant group of students become card-coun...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  show_id  ...                                        description\n",
+              "0      s1  ...  In a future where the elite inhabit an island ...\n",
+              "1      s2  ...  After a devastating earthquake hits Mexico Cit...\n",
+              "2      s3  ...  When an army recruit is found dead, his fellow...\n",
+              "3      s4  ...  In a postapocalyptic world, rag-doll robots hi...\n",
+              "4      s5  ...  A brilliant group of students become card-coun...\n",
+              "\n",
+              "[5 rows x 12 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -120,8 +291,17 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Uk6xgGmxg1sW"
+      },
+      "source": [
+        ""
+      ]
     },
     {
       "cell_type": "markdown",
@@ -139,7 +319,7 @@
       },
       "source": [
         "## Query 1\n",
-        "Edw grafw tin erwtisi"
+        "What kind of media is more, Movies or TV Series?"
       ]
     },
     {
@@ -148,7 +328,8 @@
         "id": "1vXdLmjPrcLD"
       },
       "source": [
-        ""
+        "testdf = df[['show_id','type']].groupby(['type']).count().reset_index()\n",
+        "testdf.plot().bar()"
       ],
       "execution_count": null,
       "outputs": []
